# surecheck-ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  ruff.toml  run.py
docker/: Dockerfile  docker-compose.dev.yaml  docker-compose.yaml
src/: main.py
src/ai/: prompts.py
src/ai/agent/: __init__.py  bill_agent.py  claim_agent.py  classification_agent.py  discharge_agent.py  id_agent.py
src/ai/graph/: __init__.py  state.py  workflow.py
src/api/v1/: __init__.py  claim.py
src/core/: __init__.py  aws.py  config.py  llm.py  redis.py
src/schema/: agent_dto.py  app_dto.py  claim_dto.py  enum.py  file_dto.py
src/service/: s3_service.py
src/utils/: limiter.py  logger.py  pdf_loader.py
