[project]
name = "SureCheckAI"
version = "0.1.0"
description = ""
authors = [
    { name = "SK Imtiaj Uddin", email = "imtiaj.kol@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "poethepoet (>=0.38.0,<0.39.0)",
    "pre-commit (>=4.5.0,<5.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "http://localhost:3000/"
repository = "https://github.com/imtiaj-007/surecheck-ai.git"
documentation = "http://localhost:8000/redoc/"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100
target-version = ['py312']
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | data
  | uploads
)/
'''

[tool.poe.tasks]
dev = "uvicorn src.main:app --reload"
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src --cov-report=html"
clean = "find . -type d -name '__pycache__' -exec rm -rf {} +"
format = "black src tests"
format-check = "black --check src tests"
lint-check = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
type-check = "mypy src"

[tool.poe.tasks.check-all]
sequence = ["format-check", "lint-check", "type-check"]
ignore_fail = false
