[project]
name = "SureCheckAI"
version = "0.1.0"
description = "Intelligent Medical Claims Processing Platform"
authors = [
    { name = "SK Imtiaj Uddin", email = "imtiaj.kol@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = [
    "fastapi (>=0.122.0,<0.123.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "boto3 (>=1.41.4,<2.0.0)",
    "pypdf (>=6.4.0,<7.0.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)"
]

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "ruff (>=0.14.6,<0.15.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "poethepoet (>=0.38.0,<0.39.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.urls]
homepage = "http://localhost:3000/"
repository = "https://github.com/imtiaj-007/surecheck-ai"
documentation = "http://localhost:8000/redoc/"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 100
target-version = ['py312']
extend-exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | alembic
  | data
  | uploads
)/
'''

[tool.poe.tasks]
dev = "uvicorn src.main:app --reload"
start = "python run.py"
test = "pytest tests/ -v"
test-cov = "pytest tests/ --cov=src --cov-report=html"
clean = "find . -type d -name '__pycache__' -exec rm -rf {} +"
format = "black src tests"
format-check = "black --check src tests"
lint-check = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
type-check = "mypy src"

[tool.poe.tasks.check-all]
sequence = ["format-check", "lint-check", "type-check"]
ignore_fail = false
